# gamspy

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  README_PYPI.md  RegretFrontiers.csv  SharpeFrontier.csv  bla.txt  conftest.py  data.gdx  dev_requirements.txt  mypy.ini  pyproject.toml  reinstall.py  requirements.txt  setup.py  test.py  test_mi_parameter.py  test_mi_variable.py  transport_p.gdx
.github/workflows/: release.yml
.gitlab/issue_templates/: Bug.md  bug_template.md
.gitlab/merge_request_templates/: Default.md
changelog/: 450.misc.rst  485.feature.rst  527.feature.rst  561.improvement.rst  566.misc.rst  579.doc.rst  579.feature.rst  594.improvement.rst  599.feature.rst  601.feature.rst  602.doc.rst  607.feature.rst  608.bugfix.rst  611.improvement.rst  612.improvement.rst  613.improvement.rst  614.doc.rst  615.improvement.rst  616.feature.rst  617.improvement.rst  623.improvement.rst  624.improvement.rst  625.bugfix.rst  626.bugfix.rst  629.bugfix.rst  630.bugfix.rst  631.cicd.rst  633.bugfix.rst  637.doc.rst  637.feature.rst  638.bugfix.rst  639.improvement.rst  640.improvement.rst  641.bugfix.rst  642.doc.rst  642.feature.rst  643.bugfix.rst  645.improvement.rst  646.improvement.rst  648.improvement.rst  (+162 more)
ci/: .cli.yml  .docs.yml  .formatter.yml  .gitlab-ci-audit.yml  .gitlab-ci-docs.yml  .gitlab-ci-fetch.yml  .gitlab-ci-formatter.yml  .gitlab-ci-install-gams.yml  .gitlab-ci-performance.yml  .gitlab-ci-test-3.10.yml  .gitlab-ci-test-3.11.yml  .gitlab-ci-test-3.12.yml  .gitlab-ci-test-3.13.yml  .gitlab-ci-test-3.8.yml  .gitlab-ci-test-3.9.yml  .gitlab-ci-test.yml  .gitlab-ci-update-website.yml  .gitlab-ci-upload.yml  .performance.yml  .precommit-check.yml  .test-dac.yml  .test-deg.yml  .test-lag.yml  .test-leg.yml  .test-wei.yml  .toolchain.yml  .update-website.yml  .upload.yml  precommit.yml
docs/: README.md  conf.py  gamspy.rst  glossary.rst  index.rst  license.rst  modules.rst  requirements.txt
docs/_static/: cnn_data.pth  custom.css  ffn_data.pth  geheader.h  switcher.json
docs/_templates/: custom-module-template.rst
docs/cli/: gdx.rst  index.rst  install.rst  list.rst  mps2gms.rst  probe.rst  retrieve.rst  run.rst  show.rst  uninstall.rst  update.rst  version.rst
docs/reference/: gamspy.Card.rst  gamspy.ConvertOptions.rst  gamspy.Else.rst  gamspy.ElseIf.rst  gamspy.Expression.rst  gamspy.For.rst  gamspy.FreezeOptions.rst  gamspy.GUSSScenarioDict.rst  gamspy.If.rst  gamspy.Loop.rst  gamspy.ModelInstanceOptions.rst  gamspy.Options.rst  gamspy.Ord.rst  gamspy.Problem.rst  gamspy.Product.rst  gamspy.Sand.rst  gamspy.Sense.rst  gamspy.Smax.rst  gamspy.Smin.rst  gamspy.Sor.rst  gamspy.SpecialValues.rst  gamspy.Sum.rst  gamspy._algebra.domain.rst  gamspy._algebra.number.rst  gamspy._container.rst  gamspy._engine.rst  gamspy._model.rst  gamspy._neos.rst  gamspy._symbols.alias.rst  gamspy._symbols.equation.rst  gamspy._symbols.parameter.rst  gamspy._symbols.set.rst  gamspy._symbols.universe_alias.rst  gamspy._symbols.variable.rst  gamspy.exceptions.rst  gamspy.formulations.rst  gamspy.math.rst  gamspy.rst  gamspy.utils.rst  index.rst
docs/release/: index.rst  release_0.10.0.rst  release_0.10.1.rst  release_0.10.2.rst  release_0.10.3.rst  release_0.10.4.rst  release_0.10.5.rst  release_0.11.0.rst  release_0.11.1.rst  release_0.11.10.rst  release_0.11.2.rst  release_0.11.3.rst  release_0.11.4.rst  release_0.11.5.rst  release_0.11.6.rst  release_0.11.7.rst  release_0.11.8.rst  release_0.11.9.rst  release_0.12.0.rst  release_0.12.1.rst  release_0.12.2.rst  release_0.12.3.rst  release_0.12.4.rst  release_0.12.5.rst  release_0.12.6.rst  release_0.12.7.rst  release_0.13.0.rst  release_0.13.1.rst  release_0.13.2.rst  release_0.13.3.rst  release_0.13.4.rst  release_0.13.5.rst  release_0.13.6.rst  release_0.13.7.rst  release_0.14.0.rst  release_0.14.1.rst  release_0.14.2.rst  release_0.14.3.rst  release_0.14.4.rst  release_0.14.5.rst  (+52 more)
docs/user/: absolute_beginners.rst  advanced.rst  alias.rst  basics.rst  building.rst  card_ord.rst  container.rst  developer_guide.rst  domain.rst  examples.rst  faq.rst  gamspy.functions.rst  gamspy.rst  gamspy_for_gams_users.rst  generate_model_lib.py  index.rst  installation.rst  interoperability.rst  lag_lead.rst  license.rst  migration_guide.rst  model_library.rst  model_options.rst  number.rst  parameter.rst  quickstart.rst  set.rst  solve_options.rst  underthehood.rst  variable.rst  whatisgamspy.rst
scripts/: atomic_conda_create.py  env_3.10.yml  env_3.11.yml  env_3.12.yml  env_3.13.yml  env_3.8.yml  env_3.9.yml  gams-vs-gamspy.py  performance.py  reinstall.py  update_version.py
scripts/gams_models/: aircraft.gms  blend.gms  carseq.gms  cesam2.gms  chain.gms  chenery.gms  cpack.gms  cta.gms  cutstock.gms  dyncge.gms  fdesign.gms  flowshop.gms  food.gms  fuel.gms  gapmin.gms  hansmcp.gms  inscribedsquare.gms  iobalance.gms  korcns.gms  lop.gms  mexss.gms  minlphi.gms  minlphix.gms  partssupply.gms  prodmix.gms  ps10_s_mn.gms  qdemo7.gms  qp6.gms  ramsey.gms  rcpsp.gms  robustlp.gms  rotdk.gms  sgolfer.gms  spatequ.gms  spbenders1.gms  springchain.gms  tanksize.gms  tforss.gms  thai.gms  timesteps.gms  (+5 more)
scripts/performance/: main_IJKLM.py  memory_check.py  performance.py  read.py
src/gamspy/: __init__.py  __main__.py  _algorithms.py  _cmdline.py  _communication.py  _config.py  _container.py  _control_flow.py  _convert.py  _database.py  _engine.py  _externals.py  _extrinsic.py  _gdx.py  _gmd.py  _guss.py  _internals.py  _miro.py  _model.py  _model_instance.py  _neos.py  _options.py  _records_ingestion.py  _serialization.py  _special_values.py  _types.py  _validation.py  _workspace.py  container.py  enums.py  exceptions.py  math.py  model.py  utils.py  version.py
src/gamspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gamspy_cli/: cli.py  (+11 more)
tests/: test_gamspy.py
tests/integration/external_module/: CMakeLists.txt  example.py  mylib.cpp
tmp/: bla.gms
tmpmqmdz5_v/: gamspy.pf
(+682 files in other folders)
