[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gamspy"
version = "1.14.0"
authors = [
  { name = "GAMS Development Corporation", email = "support@gams.com" },
]
readme = "README_PYPI.md"
description = "Python-based algebraic modeling interface to GAMS"
requires-python = ">=3.9"
license-files = ["LICENSE"]
keywords = ["Optimization", "GAMS"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "gamsapi[transfer] == 50.3.0",
  "gamspy_base == 50.3.0",
  "pydantic >= 2.0",
  "certifi >= 2022.09.14",
  "urllib3 >= 2.0.7",
  "typer >= 0.15.1",
  "click < 8.2.0",
]

[project.urls]
homepage = "https://gams.com/sales/gamspy_facts/"
documentation = "https://gamspy.readthedocs.io/en/latest/user/index.html"
repository = "https://github.com/GAMS-dev/gamspy"
changelog = "https://github.com/GAMS-dev/gamspy/blob/develop/CHANGELOG.md"


[project.optional-dependencies]
dev = [
  "ruff == 0.12.0",
  "pre-commit >= 3.5.0",
  "mypy >= 1.11.1",
]

test = [
  "coverage[toml] >= 7.2.7",
  "openpyxl >= 3.1.2",
  "cerberus >= 1.3.5",
  "python-dotenv >= 1.0.0",
  "pytest >= 8.0.0",
  "networkx >= 3.2.1",
  "scikit-learn >= 1.6.1",
]

doc = [
  "sphinx>=7.1.2",
  "numpydoc>=1.5.0",
  "nbsphinx>=0.9.3",
  "sphinx_copybutton>=0.5.2",
  "sphinx-favicon>=1.0.1",
  "ipykernel",
  "matplotlib>=3.7.3",
  "sphinx_design>=0.5.0",
  "pydata_sphinx_theme>=0.14.1",
  "plotly>=5.22.0",
  "kaleido==0.2.1",
  "pytest>=8.2.1",
  "nbmake>=1.5.3",
  "openpyxl>=3.1.2",
  "sphinx-tabs>=3.4.7",
  "towncrier>= 24.8.0",
]

torch = [
    "torch>=2.7.0"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
gamspy = "gamspy._cli.cli:main"

[tool.mypy]
warn_unused_configs = true
follow_imports = "skip"
follow_imports_for_stubs = true
disable_error_code = ["misc", "import-untyped"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gamspy" = ["py.typed"]

[tool.towncrier]
package = "gamspy"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "GAMSPy {version} ({project_date})"
template = "changelog/_template.rst"

# NOTE: we want to declare extra non-default types for clarity and flexibility.

[[tool.towncrier.type]]
# New behaviors, public APIs etc.
directory = "feature"
name = "New features"
showcontent = true

[[tool.towncrier.type]]
# New behaviors in existing features.
directory = "improvement"
name = "Improvements in existing functionality"
showcontent = true

[[tool.towncrier.type]]
# Something we deemed an improper undesired behavior that got corrected.
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
# Notable updates to the documentation.
directory = "doc"
name = "Improved documentation"
showcontent = true

[[tool.towncrier.type]]
# Declarations of future API removals and breaking changes in behavior.
directory = "deprecation"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
# Updates regarding dependencies.
directory = "dependency"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
# ci/cd related changes.
directory = "cicd"
name = "CI/CD changes"
showcontent = true

[[tool.towncrier.type]]
# Changes that are hard to assign to any of the above categories.
directory = "misc"
name = "Miscellaneous internal changes"
showcontent = true

[tool.coverage.run]
omit = ["*/_cli/*.py", "__main__.py", "*__init__.py", "*engine.py", "*neos.py"]

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING:", "if typing.TYPE_CHECKING:", "def __repr__", "def __del__", "@property"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "docs",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "_cli",
    "_options.py"
]

# Same as PEP8.
line-length = 79
indent-width = 4

# Assume Python 9
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-pie
    "PIE",
    # Consider merging multiple comparisons
    "PLR1714",
]
ignore = ["E203", "E501", "E701", "E741", "E743", "W605", "SIM105", "SIM115", "B028", "B006"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "cli: cli tests",
    "doc: doctests",
    "engine: engine tests",
    "neos: neos tests",
    "model_library: run all model library",
    "requires_license: tests that require license",
]
