[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gamspy"
version = "1.26.1"
authors = [
  { name = "GAMS Development Corporation", email = "support@gams.com" },
]
readme = "README_PYPI.md"
description = "Python-based algebraic modeling interface to GAMS"
requires-python = ">=3.10"
license-files = ["LICENSE"]
keywords = ["Optimization", "GAMS"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "gamsapi >= 54.1.0, < 55.0.0",
  "gamspy_base >= 54.1.0, < 55.0.0",
  "pandas >= 2.2.2, < 3.1",
  "pydantic >= 2.0",
  "requests >= 2.28.0",
  "typer >= 0.16.0",
]

[project.urls]
homepage = "https://gams.com/sales/gamspy_facts/"
documentation = "https://gamspy.readthedocs.io/en/latest/user/index.html"
repository = "https://github.com/GAMS-dev/gamspy"
changelog = "https://github.com/GAMS-dev/gamspy/blob/develop/CHANGELOG.rst"


[project.optional-dependencies]
torch = ["torch>=2.7.0"]
graph = ["graphviz>=0.20"]

[tool.uv]
exclude-newer = "3 days"
exclude-newer-package = {gamspy_base = false, gamsapi = false, gamspy-highs = false, gamspy-ipopt = false, gamspy-ipopth = false, gamspy-knitro = false, gamspy-miles = false, gamspy-minos = false, gamspy-mosek = false, gamspy-mpsge = false, gamspy-pathnlp = false, gamspy-reshop = false, gamspy-scip = false, gamspy-shot = false, gamspy-snopt = false, gamspy-soplex = false, gamspy-xpress = false, gamspy-baron = false, gamspy-cbc = false, gamspy-conopt3 = false, gamspy-copt = false, gamspy-de = false, gamspy-dicopt = false, gamspy-examiner = false, gamspy-examiner2 = false, gamspy-gurobi = false, gamspy-arm-perf = false}

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ty.src]
exclude = [
    "src/gamspy/_backend/neos.py", 
    "src/gamspy/_backend/engine.py", 
    "src/gamspy/_gmd.py",
    "src/gamspy/_records_ingestion.py", 
    "src/gamspy/formulations/nn",
    "src/gamspy/formulations/ml",
    "src/gamspy/formulations/shape.py",
    "src/gamspy/formulations/piecewise.py",
    "src/gamspy/formulations/utils.py",
]

[tool.ty.rules]
invalid-method-override = "ignore"  # Some overrides do not match the signature of equivalent gtp functions.
unresolved-import = "ignore"  # Needed for optional torch dependency

[dependency-groups]
dev = [
    "griffe>=1.15.0",
    "ty>=0.0.35",
    "prek>=0.2.28",
    "ruff>=0.14.11",
]
doc = [
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "kaleido>=0.2.1",
    "matplotlib>=3.10.8",
    "nbmake>=1.5.5",
    "nbsphinx>=0.9.8",
    "numpydoc>=1.10.0",
    "openpyxl>=3.1.5",
    "plotly>=6.5.1",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=9.0.2",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-favicon>=1.0.1",
    "sphinx-sitemap>=2.6.0",
    "sphinx-tabs>=3.4.7",
    "sphinxext-opengraph>=0.13.0",
    "towncrier>=25.8.0",
]
test = [
    "cerberus>=1.3.8",
    "coverage[toml]>=7.13.1",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]

[project.scripts]
gamspy = "gamspy_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gamspy" = ["py.typed"]

[tool.towncrier]
package = "gamspy"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "GAMSPy {version} ({project_date})"
template = "changelog/_template.rst"

# NOTE: we want to declare extra non-default types for clarity and flexibility.

[[tool.towncrier.type]]
# New behaviors, public APIs etc.
directory = "feature"
name = "New features"
showcontent = true

[[tool.towncrier.type]]
# New behaviors in existing features.
directory = "improvement"
name = "Improvements in existing functionality"
showcontent = true

[[tool.towncrier.type]]
# Something we deemed an improper undesired behavior that got corrected.
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
# Notable updates to the documentation.
directory = "doc"
name = "Improved documentation"
showcontent = true

[[tool.towncrier.type]]
# Declarations of future API removals and breaking changes in behavior.
directory = "deprecation"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
# Updates regarding dependencies.
directory = "dependency"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
# ci/cd related changes.
directory = "cicd"
name = "CI/CD changes"
showcontent = true

[[tool.towncrier.type]]
# Changes that are hard to assign to any of the above categories.
directory = "misc"
name = "Miscellaneous internal changes"
showcontent = true

[tool.coverage.run]
omit = ["*/gamspy_cli/*.py", "__main__.py", "*__init__.py", "*engine.py", "*neos.py", "*_gmd.py"]

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING:", "if typing.TYPE_CHECKING:", "def __repr__", "def __del__", "@property"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "docs",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle error
    "W",        # pycodestyle warning
    "F",        # Pyflakes
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "I",        # isort
    "PIE",      # flake8-pie
    "PLR1714",  # Consider merging multiple comparisons
    "RUF",      # Ruff-specific rules
    "TC",       # flake8-type-checking
    "C4",       # flake8-comprehensions
    "PLC0207",  # missing-maxsplit-arg
    "PLC0208",  # iteration-over-set
    "PLE",      # Pylint error rules
]
ignore = [
    "E501",   # line-too-long
    "E741",   # ambiguous-variable-name
    "E743",   # ambiguous-function-name
    "SIM105", # suppressible-exception
    "SIM117", # multiple-with-statements
    "RUF005", # collection-literal-concatenation
    "RUF022", # unsorted-dunder-all
    "B905"    # zip-without-explicit-strict
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "cli: cli tests",
    "doc: doctests",
    "engine: engine tests",
    "neos: neos tests",
    "model_library: run all model library",
    "requires_license: tests that require license",
]
